Styling fixes (nav darkmode toggle position, added padding to elements in full width template, banner right,left image on mobile, removed background from home banner ads)

--- a/ubyssey/static_src/src/styles/modules/_advertisements.scss
+++ b/ubyssey/static_src/src/styles/modules/_advertisements.scss
@@ -213,18 +213,8 @@ main.article .o-advertisement--leaderboard {
 .o-advertisement--fw-end {
   display: flex;
   justify-content: space-around;
-}
 
-.lightmode{
-  .o-advertisement--header-bar {
-    background-color: #dddddd;
-    border-bottom: 1px solid black;
-  }
-}
-
-.darkmode {
-  .o-advertisement--header-bar {
-    background-color: #424242;
-    border-bottom: 1px solid #535353;
+  @media($bp-smaller-than-phablet) {
+    flex-direction: column;
   }
 }
